Bevel Tool - Amount value slider maximum does not adapt to Amount Type settings automaticly (tested in 2.70a and 2.71RC) #40648

Closed
opened 2014-06-16 06:08:48 +02:00 by martin me · 5 comments

System Information
Win 7 64bit
Radeon HD 6850

Blender Version
2.70a, 2.71RC

The Bevel Tool's "Amount" value slider maximum does not adapt to the "Amount Type" settings automaticly. For example - when I switch the Type from Offset to Percent I can't slide to Values higher than 1 what is the maximum value for the previous "Offset" amount type. Instead I have to set the value per Keyboard, what fortunately works. The newly set value also marks the new maximum value you can set by slider too afterwards.

In my opinion the slider maximum value should be automaticly switched to 100 when the "Amount Type" is switchted to "Percent" and of course also automaticly back to 1 if the "Amount Type" is changed back to any other.

Greetings Martin

**System Information** Win 7 64bit Radeon HD 6850 **Blender Version** 2.70a, 2.71RC The Bevel Tool's "Amount" value slider maximum does not adapt to the "Amount Type" settings automaticly. For example - when I switch the Type from Offset to Percent I can't slide to Values higher than 1 what is the maximum value for the previous "Offset" amount type. Instead I have to set the value per Keyboard, what fortunately works. The newly set value also marks the new maximum value you can set by slider too afterwards. In my opinion the slider maximum value should be automaticly switched to 100 when the "Amount Type" is switchted to "Percent" and of course also automaticly back to 1 if the "Amount Type" is changed back to any other. Greetings Martin
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @martinme

Added subscriber: @martinme
Bastien Montagne self-assigned this 2014-06-16 08:58:49 +02:00

This issue was referenced by 5ca44ff952

This issue was referenced by 5ca44ff9521d83a2b4acd164c30fbd3815084560

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5ca44ff952.

Closed by commit 5ca44ff952.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40648
No description provided.