Fix T40648: Bevel Tool - Amount value slider maximum does not adapt to Amount Type settings automaticly.